@@ -3,6 +3,10 @@
 # $Header: $
 
   10 Aug 2008; Jack Miller (TheMoken) <jack@codezen.org>
+  -canto-9999-r1.ebuild, +canto-9999-r2.ebuild:
+  Remove sed hacks from scm ebuild.
+
+  10 Aug 2008; Jack Miller (TheMoken) <jack@codezen.org>
   -canto-0.4.3-r1.ebuild, +canto-0.4.4.1.ebuild:
   Version bump. Remove sed hacks.
 
